# FHIR-Agent

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEMO.md  Dockerfile  Makefile  PHASING.md  README.md  REFERENCES.md  SHARP_CONTEXT.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
agents/coordinator/: README.md  agent.yaml  system_prompt.md
agents/patient_educator/: agent.yaml  system_prompt.md
agents/schemas/: patient_narrative.json  reconciliation_report.json  regimen_proposal.json  safety_verdict.json
demo/: p123_fhir_bundle.json
docs/: INDEX.md
docs/design/: AGENTS.md  ARCHITECTURE.md  DATA_FLOW.md  DIAGRAMS.md  MCP_SERVER.md  SAFETY.md  SCHEMAS.md  SHARP_CONTEXT.md  SYSTEM_DESIGN.md  SYSTEM_FLOW.md
docs/reference/: REFERENCES.md  RISKS.md
medrec_superpower/: __init__.py  __main__.py  errors.py  schemas.py  server.py
medrec_superpower/drug/: __init__.py  medlineplus.py  rxnav.py  schemas.py
medrec_superpower/fhir/: __init__.py  fixture_loader.py  po_client.py
medrec_superpower/sharp/: __init__.py  decorator.py  extensions_middleware.py  headers.py  jwt.py  keys.py  redact.py
medrec_superpower/tools/: __init__.py  check_interaction.py  get_discharge_meds.py  get_drug_education_handout.py  get_patient_context.py  get_pre_admit_meds.py  lookup_rxnorm.py  parse_discharge_summary.py
scripts/: dev_keypair.py  export_demo_fhir_bundle.py  export_schemas.py
tests/: conftest.py
tests/fixtures/synthea/: P123.json
tests/integration/: test_mcp_http.py  test_p0_metformin.py  test_server_smoke.py
tests/unit/: test_extensions_middleware.py  test_fixture_loader.py  test_po_client.py  test_pydantic_schemas.py  test_redact_logging.py  test_requires_sharp_decorator.py  test_rxnav_client.py  test_sharp_headers.py  test_sharp_keys.py  test_sharp_validation.py  test_tool_check_interaction.py  test_tool_drug_education_handout.py  test_tool_get_discharge_meds.py  test_tool_get_patient_context.py  test_tool_get_pre_admit_meds.py  test_tool_lookup_rxnorm.py  test_tool_parse_discharge_summary.py
